tests/baselines/reference/sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2(target=es2015).errors.txt
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(32,35): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(35,35): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(38,35): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(42,55): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(46,55): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(51,5): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(56,29): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(59,29): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(62,29): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(70,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(78,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(86,6): error TS2488: Type '{ name: string; skills: { primary: string; secondary: string; }; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(92,62): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(95,63): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(98,63): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(107,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(116,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(125,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(130,49): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(133,49): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(136,49): error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(145,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(154,6): error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts(163,6): error TS2488: Type '{ name: string; skills: { primary: string; secondary: string; }; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfObjectBindingPatternDefaultValues2.ts (24 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    interface Robot {
        name: string;
        skill: string;
    }
    
    interface MultiRobot {
        name: string;
        skills: {
            primary: string;
            secondary: string;
        };
    }
    
    let robots: Robot[] = [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }];
    let multiRobots: MultiRobot[] = [{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }];
    
    function getRobots() {
        return robots;
    }
    
    function getMultiRobots() {
        return multiRobots;
    }
    
    let nameA: string, primaryA: string, secondaryA: string, i: number, skillA: string;
    let name: string, primary: string, secondary: string, skill: string;
    
    for ({name: nameA = "noName" } of robots) {
                                      ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({name: nameA = "noName" } of getRobots()) {
                                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({name: nameA = "noName" } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({ skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of multiRobots) {
                                                          ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for ({ skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of getMultiRobots()) {
                                                          ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for ({ skills: { primary: primaryA = "primary", secondary: secondaryA = "secondary" } =
        { primary: "nosKill", secondary: "noSkill" } } of
        <MultiRobot[]>[{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    
    for ({ name = "noName" } of robots) {
                                ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({ name = "noName" } of getRobots()) {
                                ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({ name = "noName" } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of multiRobots) {
         ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for ({
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of getMultiRobots()) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    for ({
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of [{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skills: { primary: string; secondary: string; }; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primaryA);
    }
    
    
    for ({name: nameA = "noName", skill: skillA = "noSkill" } of robots) {
                                                                 ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({name: nameA = "noName", skill: skillA = "noSkill"  } of getRobots()) {
                                                                  ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({name: nameA = "noName", skill: skillA = "noSkill"  } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of multiRobots) {
         ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of getMultiRobots()) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name: nameA = "noName",
        skills: {
            primary: primaryA = "primary",
            secondary: secondaryA = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of <MultiRobot[]>[{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    
    for ({ name = "noName", skill  = "noSkill" } of robots) {
                                                    ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({ name = "noName", skill = "noSkill"  } of getRobots()) {
                                                    ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({ name = "noName", skill  = "noSkill" } of [{ name: "mower", skill: "mowing" }, { name: "trimmer", skill: "trimming" }]) {
                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skill: string; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name = "noName",
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of multiRobots) {
         ~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name = "noName",
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of getMultiRobots()) {
         ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ({
        name = "noName",
        skills: {
            primary = "primary",
            secondary = "secondary"
        } = { primary: "noSkill", secondary: "noSkill" }
    } of [{ name: "mower", skills: { primary: "mowing", secondary: "none" } },
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        { name: "trimmer", skills: { primary: "trimming", secondary: "edging" } }]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ name: string; skills: { primary: string; secondary: string; }; }[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }